Fix research problem alignment.
git-svn-id: https://devel.nmrbox.org/svn/nmrbox/trunk/web@7645 33504fd2-e2af-4168-9044-610c50ee6ce2

--- a/newweb/nmrbox/src/app/home/home.component.scss
+++ b/newweb/nmrbox/src/app/home/home.component.scss
@@ -21,7 +21,6 @@ $nmrbox-blue-dark: #3A4C51;
 
 #rp-tile {
   border-right: 2px solid #c1c1c1;
-  margin-left: -30px;
   max-width: 350px;
 }
 
